# ynab-importer

./: .gitignore  Cargo.toml  db.sqlite3  generate_client.ps1  scratch.txt
api-lib/: Cargo.toml  README.md
api-lib/.openapi-generator/: FILES
api-lib/src/apis/: configuration.rs
migrations/: V0__init.sql
src/: db.rs  error.rs  event.rs  lib.rs  main.rs  ofx.rs  setup.rs  sync.rs  ui.rs
