[package]
name = "ynab-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0" }
notify-debouncer-full = "0.4.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
refinery = { version = "0.8.14", features = ["rusqlite"] }
clap = { version = "4.5.21", features = ["derive"] }

[dependencies.ynab_api]
path = "api-lib"

[[bin]]
name = "configure"

[[bin]]
name = "service"