[package]
name = "ynab-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
notify-debouncer-full = "0.4.0"
refinery = { version = "0.8.14", features = ["rusqlite"] }
regex = "1.11.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.215"
sgmlish = "0.2.0"
tokio = { version = "1.41.1", features = ["full"] }
uuid = "1.11.0"

[dependencies.ynab_api]
path = "api-lib"

[[bin]]
name = "configure"

[[bin]]
name = "service"