[package]
name = "ynab-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
eframe = "0.30.0"
notify-debouncer-full = "0.4.0"
pretty_assertions = "1.4.1"
refinery = { version = "0.8.14", features = ["rusqlite"] }
regex = "1.11.1"
rfd = "0.15.0"  
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.215"
serde_json = "1.0.133"
sgmlish = "0.2.0"
tokio = { version = "1.41.1", features = ["full"] }
uuid = "1.11.0"
thiserror = "2.0.3"

[dependencies.ynab_api]
path = "api-lib"

[[bin]]
name = "setup_cli"

[[bin]]
name = "setup_ui"

[[bin]]
name = "service"